# escalation-engine

./: .gitignore  CHARTER.md  LICENSE  PUBLISHING.md  QUICKSTART.md  README.md  escalation_config.yaml  pyproject.toml
docs/: COMPLETE_GUIDE.md
escalation_engine/: __init__.py  cli.py  config.py  core.py  metrics.py  providers.py  server.py
examples/: basic_usage.py  cost_tracking.py  customer_support.py  game_ai.py  learning_system.py
tests/: __init__.py  test_core.py  test_providers.py
